# randomizer

./: Cargo.toml  alttp.yml  data.yaml  supermetroid.yml
src/: allocator.rs  default.logic.txt  header.rs  logic.rs  logic_parse.rs  main.rs
src/allocator/: condition.rs
src/logic/: allocation_checker.rs  allocator.rs  condition.rs  logic_loader.rs
