[package]
name = "minish-random"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
heck = "0.4.0"
joinery = "2.1.0"
rand = "0.8.4"
regex = "1.5.4"
scryer-prolog = "0.8.127"
serde = { version = "1.0.136", features = ["derive"] }
serde_yaml = "0.8.23"
structopt = "0.3.26"
thiserror = "1.0.30"
